--- a/package.json
+++ b/package.json
@@ -16,8 +16,17 @@
     "@babel/core": "^7.23.5",
     "@babel/preset-env": "^7.23.5",
     "babel-loader": "^9.1.3",
+    "postcss": "^8.4.32",
+    "postcss-loader": "^7.3.3",
+    "postcss-preset-env": "^9.3.0",
+    "sass": "^1.69.5",
+    "sass-loader": "^13.3.2",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
+  },
+  "dependencies": {
+    "css-loader": "^6.8.1",
+    "mini-css-extract-plugin": "^2.7.6"
   }
 }
